# Installway

./: LICENSE  README.md
common/: Cargo.toml
common/locales/: en.toml  fr.toml
common/src/: assoc.rs  i18n.rs  lib.rs  log.rs  models.rs  paths.rs  shortcuts.rs  utils.rs
installer/: Cargo.toml  build.rs
installer/src/: extract.rs  install.rs  main.rs  payload.rs  proc.rs  ui_minimal.rs  ui_win32.rs
installer/src/ui/: helpers.rs  minimal.rs  mod.rs
installer/src/ui/win32/: handlers.rs  mod.rs  views.rs
installer_builder/: Cargo.toml  build.rs
installer_builder/src/: args.rs  embed.rs  icon.rs  keygen.rs  main.rs  pack.rs  version.rs
test/: license.txt
test/install_test/: installer_info.json
test/install_test_new/: installer_info.json
uninstaller/: build.rs
uninstaller/src/: cleanup.rs  main.rs  stage1.rs  stage2.rs  ui.rs
uninstaller/src/stages/: finalize.rs  mod.rs  uninstall.rs
